--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.0",
+        "friendsofphp/php-cs-fixer": "^3.16",
         "phpstan/phpstan": "^1.0",
         "phpunit/phpunit": "^9.0"
     },
