change composer not to clean after running tests

--- a/composer.json
+++ b/composer.json
@@ -44,11 +44,12 @@
         "post-autoload-dump": ["bin/generate"],
         "test": [
             "bin/generate",
-            "vendor/bin/phpunit",
-            "bin/clean"
+            "vendor/bin/phpunit"
         ],
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
-        "phpstan": "./vendor/bin/phpstan analyse --memory-limit=1G"
+        "phpstan": "./vendor/bin/phpstan analyse --memory-limit=1G",
+        "generate": "bin/generate",
+        "clean": "bin/clean"
     },
     "bin": [
         "bin/generate"
