--- a/config/fields/package.json
+++ b/config/fields/package.json
@@ -1,87 +1,80 @@
 {
-  "class": "Cloud",
-  "document_link": "https://www.elastic.co/guide/en/ecs/current/ecs-cloud.html",
-  "key": "cloud",
+  "class": "Package",
+  "document_link": "https://www.elastic.co/guide/en/ecs/current/ecs-package.html",
+  "key": "package",
   "properties": {
-    "account.id": {
+    "architecture": {
       "types": [
         "nullable",
         "string"
       ]
     },
-    "account.name": {
+    "build_version": {
       "types": [
         "nullable",
         "string"
       ]
     },
-    "availability_zone": {
+    "checksum": {
       "types": [
         "nullable",
         "string"
       ]
     },
-    "instance.id": {
+    "description": {
       "types": [
         "nullable",
         "string"
       ]
     },
-    "instance.name": {
+    "install_scope": {
       "types": [
         "nullable",
         "string"
       ]
     },
-    "machine.type": {
+    "installed": {
       "types": [
         "nullable",
-        "string"
-      ]
-    },
-    "project.id": {
-      "types": [
-        "nullable",
-        "string"
-      ]
-    },
-    "project.name": {
-      "types": [
-        "nullable",
-        "string"
-      ]
-    },
-    "provider": {
-      "types": [
-        "nullable",
-        "string"
-      ]
-    },
-    "region": {
-      "types": [
-        "nullable",
-        "string"
-      ]
-    },
-    "service.name": {
-      "types": [
-        "nullable",
-        "string"
-      ]
-    },
-    "origin": {
-      "types": [
-        "nullable",
-        "Hamidrezaniazi\\Pecs\\Fields\\Cloud"
+        "Carbon\\Carbon"
       ],
-      "cast": "getBody"
+      "cast": "toIso8601ZuluString"
     },
-    "target": {
+    "license": {
       "types": [
         "nullable",
-        "Hamidrezaniazi\\Pecs\\Fields\\Cloud"
-      ],
-      "cast": "getBody"
+        "string"
+      ]
+    },
+    "name": {
+      "types": [
+        "nullable",
+        "string"
+      ]
+    },
+    "path": {
+      "types": [
+        "nullable",
+        "string"
+      ]
+    },
+    "size": {
+      "types": [
+        "nullable",
+        "int"
+      ]
+    },
+    "type": {
+      "types": [
+        "nullable",
+        "string"
+      ]
+    },
+    "version": {
+      "types": [
+        "nullable",
+        "string"
+      ]
     }
   }
 }
