--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/collections": "^9.0",
+        "illuminate/collections": ">=8",
         "monolog/monolog": "^2.0",
         "nesbot/carbon": "^2.0"
     },
