--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
         "phpstan": "./vendor/bin/phpstan analyse --memory-limit=1G",
         "generate": "bin/generate",
-        "clean": "bin/clean"
+        "clean": "bin/clean",
+        "phpcs": "./vendor/bin/php-cs-fixer fix ."
     },
     "bin": [
         "bin/generate"
