--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,9 @@
 /.github            export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
-/phpunit.xml.dist   export-ignore\
+/phpunit.xml.dist   export-ignore
 /tests              export-ignore
+/bin                export-ignore
 /.editorconfig      export-ignore
 /.php_cs.dist.php   export-ignore
 /phpstan*           export-ignore
