--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "ecs",
         "elastic",
         "filebeat",
-        "Elastic Common Schema",
+        "elastic common schema",
+        "php elastic common schema",
+        "php ecs",
         "pecs",
         "hamidrezaniazi"
     ],
