--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "php": "^8.1",
         "illuminate/collections": ">=8",
         "monolog/monolog": "^3.0",
-        "nesbot/carbon": "^2.0"
+        "nesbot/carbon": "^2.0|^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.0",
