--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,9 +17,10 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.1, 8.2]
+        php: [8.2, 8.3]
+        carbon: ['^2.0', '^3.0']
 
-    name: PHP ${{ matrix.php }}
+    name: PHP ${{ matrix.php }} with Carbon ${{ matrix.carbon }}
 
     steps:
       - name: Checkout code
@@ -31,8 +32,10 @@ jobs:
           php-version: ${{ matrix.php }}
           coverage: none
 
-      - name: Install Composer dependencies
-        run: composer install
+      - name: Install Composer dependencies with Carbon version ${{ matrix.carbon }}
+        run: |
+          composer require nesbot/carbon:${{ matrix.carbon }} --no-update
+          composer install
 
       - name: Run tests
         run: composer test
